# training-tracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DYNAMODB_MIGRATION_SUMMARY.md  DYNAMODB_SETUP.md  LICENSE  README.md  openApi.yaml  package-lock.json  pyproject.toml
.github/actions/cache/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build-deploy-dev.yml  release-deploy-prod.yml
cdk/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: training-tracker-api.ts  training-tracker-tables.ts  training-tracker-ui.ts
cdk/lib/common/: api-gw.ts  env-stack.ts  lambda-function.ts  precompile.py  python-stack.ts  string-utils.ts
cdk/test/: cdk.test.ts
scripts/: create_dynamodb_table.py
src/training_tracker/: __init__.py  api.py  api_lambda.py  application_factory.py  athlete_routes.py  database.py  main.py  models.py  storage.py  training_session.py  training_session_routes.py
tests/: __init__.py  assertion_utils.py  conftest.py  dynamodb_local.py  lambda_performance.py  run.py  start.py  test_api.py  test_api_lambda.py  test_training_session.py
training-tracker-ui/: index.html  package-lock.json  package.json  vite.config.ts
training-tracker-ui/src/: App.tsx  api.ts  types.ts
training-tracker-ui/src/components/: AthleteManagement.tsx  AthleteProfile.tsx  SessionForm.tsx  SessionList.tsx  StatisticsCard.tsx
ui/: .env  .env.aws-dev  package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: api.ts  app.tsx  index.tsx  training-sessions.tsx
